fix: Navigation z-index
refs: Resolves #15

--- a/src/scss/components/Navigation.scss
+++ b/src/scss/components/Navigation.scss
@@ -7,6 +7,7 @@
   flex-direction: row;
   width: 100%;
   background-color: var(--surface-1);
+  z-index: 80;
 }
 
 .nav__item {
